--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 authors = ["Jack Grigg <str4d@i2pmail.org>", "Jeff Burdges <burdges@gnunet.org>", "Syed Hosseini <syed@riseup.net>"]
-description = "Aggregate BLS-like signatures"
-documentation = "https://docs.rs/w3f-bls"
-homepage = "https://github.com/w3f/bls"
+description = "Aggregate BLS-like signatures (a fork of w3f-bls crate for Tangle Network)"
+documentation = "https://docs.rs/tnt-bls"
+homepage = "https://github.com/tangle-network/bls"
 license = "MIT/Apache-2.0"
-name = "w3f-bls"
-repository = "https://github.com/w3f/bls"
+name = "tnt-bls"
+repository = "https://github.com/tangle-network/bls"
 version = "0.1.8"
 edition = "2018"
 
